--- a/src/scss/modules/_filter.scss
+++ b/src/scss/modules/_filter.scss
@@ -2,48 +2,65 @@
 
 .filter {
 
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+  }
+
   &__group {
+    display: flex;
     border: none;
     padding: 0;
+    margin: 0;
+    gap: 12px;
+
+    &_choices {
+      gap: 64px;
+    }
   }
 
   &__radio {
     appearance: none;
-    
-    &:focus + .filter__label {
-      background-color: $orange;
-    }
+    position: absolute;
+  }
 
-    &:checked + .filter__label {
-      background-color:  $light-orange;
-    }
+  &__radio:focus-visible + &__label {
+    outline: 2px solid $orange;
+    outline-offset: 5px;
+  }
 
-    &:checked + .filter__label span{
-      color: $white;
-    }
+  &__radio:checked + &__label {
+    background-color:  $light-orange;
   }
 
   &__label {
     display: inline-block;
     padding: 16px;
+    padding-left: 60px;
     cursor: pointer;
     border-radius: 300px;
+    background-color:  $white;
+    color: $dark;
+    background-size: 40px;
+    background-position: center left 16px;
+    background-repeat: no-repeat;
+
+
+    &_flowers {
+      background-image: url('/img/flowers.png');
+    }
+    &_toys {
+        background-image: url('/img/toys.png');
+    }
+    &_postcards {
+        background-image: url('/img/postcards.png');
+    }
 
     &:hover {
-      background-color: pink;
+      background-color: $orange;
     }
-  }
-
-  &__label-container {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-
-  &__img {
-    width: 40px;
-    height: 40px;
-    object-fit: contain;
   }
 
   &__text {
@@ -51,6 +68,34 @@
     font-weight: 400;
     color: $dark;
   }
-}
-.container {
+
+  &__choices {
+  }
+
+  &__select {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    &:after {
+      content: '';
+      width: 8px;
+      height: 8px;
+      background: url("/public/img/triangle.svg") no-repeat center/contain;
+    }
+  }
+
+  &__input-price {
+  }
+
+  &__type-list {
+  }
+
+  &__type-item {
+  }
+
+  &__type-btn {
+  }
+
+
 }
