--- a/src/scss/modules/_subscribe.scss
+++ b/src/scss/modules/_subscribe.scss
@@ -1,10 +1,8 @@
 @use '../variables' as *;
 
 .subscribe {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  padding-top: 80px;
+  padding-bottom: 140px;
 
   &__title {
     font-family: $second-family;
@@ -22,6 +20,7 @@
     max-width: 524px;
     width: 100%; 
     height: 40px;
+    margin: 0 auto;
   }
 
   &__input {
@@ -52,6 +51,4 @@
     border-radius: 32px;
     background: $light-orange;
   }
-}
-.container {
 }
