--- a/src/scss/modules/_card.scss
+++ b/src/scss/modules/_card.scss
@@ -1,4 +1,5 @@
 @use '../variables' as *;
+@use '../media' as *;
 
 .card {
   background-color: $white;
@@ -9,22 +10,31 @@
   display: flex;
   flex-direction: column;
 
+  @include mobile {
+    min-height: 380px;
+    border-radius: 20px;
+  }
+
   &__image {
     object-fit: cover;
     width: 100%;
     height: 359px;
+
+    @include mobile {
+      height: 180px;
+    }
   }
 
   &__content {
     flex-grow: 1;
     padding: 32px 16px;
-
-    display: grid;
-    grid-template-rows: 1fr min-content;
-    grid-template-columns: max-content 1fr;
-    justify-content: space-between;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
     gap: 16px;
+
+    @include mobile {
+      padding: 16px 12px;
+    }
   }
 
   &__title {
@@ -32,6 +42,22 @@
     font-size: 18px;
     align-self: start;
     grid-column: 1 / -1;
+
+    @include mobile {
+      font-size: 14px;
+    }
+  }
+
+  &__footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+
+    @include mobile {
+      align-items: stretch;
+      flex-direction: column;
+    }
   }
 
   &__date-delivery {
@@ -40,6 +66,10 @@
     background-repeat: no-repeat;
     background-position: left bottom;
     font-size: 14px;
+
+    @include mobile {
+      font-size: 12px;
+    }
   }
 
   &__btn {
