--- a/src/scss/modules/_filter.scss
+++ b/src/scss/modules/_filter.scss
@@ -1,4 +1,5 @@
 @use '../variables' as *;
+@use '../media' as *;
 
 .filter {
 
@@ -6,11 +7,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 30px;
+    gap: 32px;
+    flex-wrap: wrap;
   }
 
   &__group {
     display: flex;
+    flex-wrap: wrap;
     border: none;
     padding: 0;
     margin: 0;
@@ -18,6 +21,10 @@
 
     &_choices {
       gap: 64px;
+
+      @include mobile {
+        gap: 40px;
+      }
     }
   }
 
@@ -46,6 +53,16 @@
     background-size: 40px;
     background-position: center left 16px;
     background-repeat: no-repeat;
+    min-height: 72px;
+    display: flex;
+    align-items: center;
+
+    @include mobile {
+      padding: 10px 12px 10px 40px;
+      background-size: 24px;
+      background-position: center left 12px;
+      min-height: 40px;
+    }
 
 
     &_flowers {
@@ -63,13 +80,15 @@
     }
   }
 
+    // &__choices-box {
+
+    // }
+
+
   &__text {
     font-family: $font-family;
     font-weight: 400;
     color: $dark;
-  }
-
-  &__choices {
   }
 
   &__select {
@@ -85,17 +104,17 @@
     }
   }
 
-  &__input-price {
-  }
+  // &__input-price {
+  // }
 
-  &__type-list {
-  }
+  // &__type-list {
+  // }
 
-  &__type-item {
-  }
+  // &__type-item {
+  // }
 
-  &__type-btn {
-  }
+  // &__type-btn {
+  // }
 
 
 }
