--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -1,16 +1,22 @@
 @use '../variables' as *;
+@use '../media' as *;
+
 
 .footer {
   padding: 80px 0;
   background: $footer url('img/figure.svg') no-repeat 110%;
   background-position: bottom;
-  background-size: contain;
+  background-size: 100%;
 
   &__container {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 60px;
+
+    @include tablet {
+      gap: 40px;
+    }
   }
 
   &__logo {
