--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -1,7 +1,16 @@
 @use '../variables' as *;
+@use '../media' as *;
 
 .hero {
   padding: 60px 0;
+
+  @include tablet {
+    padding: 40px 0;
+  }
+
+  @include mobile {
+    padding: 40px 0 73px;
+  }
 
   &__head-group {
     margin-bottom: 24px;
@@ -10,41 +19,51 @@
   &__title {
     font-family: $second-family;
     font-weight: 400;
-    font-size: clamp(
-      80px, //min font size/ See figma 1024px
-      calc(80px + (40 * (100vw - 1024px) / (1440 - 1024))), //calculate font size between 1440 and 1024
-      120px, //max font size. See figma 1440px
-    );
+    @include responsive-font-size(80, 120, 1024, 1440);
     line-height: 1.2;
     text-transform: uppercase;
     text-align: center;
     color: $green;
+    
+    @include laptop {
+      @include responsive-font-size(58, 80, 768, 1024);
+    }
+
+    @include tablet {
+      @include responsive-font-size(40, 58, 320, 768);
+    }
   }
 
   &__subtitle {
     font-family: $second-family;
     font-style: italic;
     font-weight: 400;
-    font-size: clamp(
-      32px, //min font size/ See figma 1024px
-      calc(32px + (8 * (100vw - 1024px) / (1440 - 1024))), //calculate font size between 1440 and 1024
-      40px, //max font size. See figma 1440px
-    );
+
+    @include responsive-font-size(32, 40, 1024, 1440);
     line-height: 1.3;
     text-align: right;
     color: $dark;
+
+    @include laptop {
+      @include responsive-font-size(24, 32, 768, 1024);
+    }
+
+    @include tablet {
+      @include responsive-font-size(18, 24, 320, 768);
+    }
   }
 
   &__group-image {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 26px; 
+    gap: 24px calc(24 / 1300 * 100%); //calc explane: img width / container width * 100 %; 
   }
 
   &__image {
-    object-fit: contain;
+    object-fit: cover;
     width: calc(284 / 1300 * 100%); //calc explane: img width / container width * 100 %
+    aspect-ratio: 284 / 352;
 
     &_left {
       border-radius: 400px 400px 400px 0; 
@@ -52,6 +71,7 @@
 
     &_center {
       width: calc(680 / 1300 * 100%); //calc explane: img width / container width * 100 %
+      aspect-ratio: 680 / 588;
     }
 
     &_right {
