--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,6 +8,7 @@
 @use './modules/goods';
 @use './modules/card';
 @use './modules/footer';
+@use './modules/cart';
 
 
 @import 'normalize.css'; //connect normilize
