--- a/src/scss/modules/_choices.scss
+++ b/src/scss/modules/_choices.scss
@@ -1,9 +1,17 @@
+@use '../variables' as *;
+
 .choices {
 
+
   &__btn {
+
   }
 
   &__box {
     display: none;
+
+    &_open {
+      display: block;
+    }
   }
 }
