--- a/src/scss/modules/_filter.scss
+++ b/src/scss/modules/_filter.scss
@@ -80,9 +80,23 @@
     }
   }
 
-    // &__choices-box {
+  &__choices {
+    position: relative;
+  }
 
-    // }
+  &__select {
+    line-height: 1.3;
+  }
+
+  &__choices-box {
+    position: absolute;
+    top: calc(100% + 20px);
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: $white;
+    padding: 24px;
+    border-radius: 12px;
+  }
 
 
   &__text {
@@ -104,8 +118,22 @@
     }
   }
 
-  // &__input-price {
-  // }
+  &__price {
+    border: 0;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 8px;
+  }
+
+  &__input-price {
+    border-radius: 32px;
+    padding: 8px 16px;
+    width: 110px;
+    height: 40px;
+    background-color: $bg;
+    border: 0;
+  }
 
   // &__type-list {
   // }
@@ -113,8 +141,10 @@
   // &__type-item {
   // }
 
-  // &__type-btn {
-  // }
+  &__type-btn {
+    white-space: nowrap;
+    line-height: 1.3;
+  }
 
 
 }
