--- a/src/scss/modules/_cart.scss
+++ b/src/scss/modules/_cart.scss
@@ -3,15 +3,49 @@
 
 
 .cart {
-
   padding-top: 100px;
+  display: none;
+  align-self: start;
+
+  &_open {
+    display: flex;
+  }
+
+  @media (max-width: 1360px) {
+    padding: 0;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: auto;
+    height: 100vh;
+  }
+
+  @include mobile {
+    height: auto;
+    right: 14px;
+  }
 }
 .cart__container {
   border-radius: 32px;
   padding: 24px 16px;
   max-width: 310px;
   background-color: $white;
+  min-height: 778px;
+  display: flex;
+  flex-direction: column;
+
+  @media (max-width: 1360px) {
+    height: 100%;
+  }
+  
+  @include mobile {
+    min-height: auto;
+    max-width: 292px;
+  }
 }
+
 .cart__header {
   display: flex;
   // flex-direction: column;
@@ -31,41 +65,96 @@
   background-repeat: no-repeat;
   background-position: left bottom;
   font-size: 14px;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 
   @include mobile {
     font-size: 12px;
   }
 }
+
 .cart__list {
+  margin-bottom: 24px;
+  flex-grow: 1;
 }
+
 .cart__item {
   padding: 16px 0 ;
   border-bottom: 1px solid rgba($dark, 0.04);
   display: grid;
   grid-template-columns: 54px 1fr min-content;
   gap: 8px 12px;
+  align-items: center;
   grid-template-areas: 
   'image title title'
   'image counter price';
+
+  &:last-child {
+    border-bottom-color: transparent;
+  }
 }
 .cart__image {
+  align-self: start;
   grid-area: image;
+  border-radius: 12px;
+  width: 54px;
+  height: 54px;
+  object-fit: cover;
 }
+
 .cart__item-title {
   grid-area: title;
+  font-weight: 400;
+  font-size: 14px;
+  color: $dark;
 }
+
 .cart__counter {
   grid-area: counter;
+  display: flex;
+  gap: 4px;
 }
+
 .cart__counter-btn {
+  border-radius: 6px;
+  width: 22px;
+  height: 29px;
+  background: $bg;
+  font-size: 14px;
 }
+
 .cart__counter-input {
+  font-size: 14px;
+  width: 20px;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+  text-align: center;
+  outline: 1px solid transparent;
+
+  &::-webkit-inner-spin-button,
+  &::-webkit-outer-spin-button {
+    appearance: none;
+    margin: 0;
+  }
+
+  &:focus-visible {
+    outline-color: $dark;
+  }
 }
+
 .cart__price {
   grid-area: price;
 }
+
 .cart__footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
 .cart__oreder-btn {
+  border-radius: 32px;
+  padding: 9px 16px 8px 16px;
+  background: $light-orange;
+  color: $white;
 }
