--- a/src/scss/modules/_filter.scss
+++ b/src/scss/modules/_filter.scss
@@ -96,6 +96,10 @@
     background-color: $white;
     padding: 24px;
     border-radius: 12px;
+
+    &_type {
+      padding: 16px;
+    }
   }
 
 
@@ -133,17 +137,34 @@
     height: 40px;
     background-color: $bg;
     border: 0;
+
+    @include mobile {
+      width: 80px;
+    }
   }
 
   // &__type-list {
   // }
 
-  // &__type-item {
-  // }
+  &__type-item {
+    margin-bottom: 8px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 
   &__type-btn {
     white-space: nowrap;
     line-height: 1.3;
+
+    &:hover {
+      color: $light-orange;
+    }
+
+    &:active {
+      color: $orange;
+    }
   }
 
 
