--- a/src/scss/modules/goods.scss
+++ b/src/scss/modules/goods.scss
@@ -48,4 +48,11 @@
       column-gap: 12px;
     }
   }
+
+  &__no-product {
+    text-align: center;
+    font-size: 24px;
+    color: $green;
+    grid-column: 1 / -1;
+  }
 }
