--- a/src/scss/modules/cart.scss
+++ b/src/scss/modules/cart.scss
@@ -30,7 +30,8 @@
 .cart__container {
   border-radius: 32px;
   padding: 24px 16px;
-  max-width: 310px;
+  max-width: 100%;
+  width: 310px;
   background-color: $white;
   min-height: 778px;
   display: flex;
@@ -41,8 +42,8 @@
   }
   
   @include mobile {
-    min-height: auto;
-    max-width: 292px;
+    min-height: 350px;
+    width: 292px;
   }
 }
 
@@ -57,8 +58,7 @@
   font-weight: 400;
   font-size: 28px;
 }
-.cart__close {
-}
+
 .cart__date-delivery {
   padding-left: 20px;
   background-image: url('/img/delivery.svg');
