Offloaded Mirano server to glitch and render services. The layout of the goods order form was made and transferred to a separate file Order.jsx.  The order form is controlled in orderController.js. Styles for this form are written.

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,6 +10,7 @@
 @use './modules/footer';
 @use './modules/cart';
 @use './modules/preload';
+@use './modules/order';
 
 
 @import 'normalize.css'; //connect normilize
