--- a/src/scss/modules/cart.scss
+++ b/src/scss/modules/cart.scss
@@ -152,7 +152,7 @@
   justify-content: space-between;
 }
 
-.cart__oreder-btn {
+.cart__order-btn {
   border-radius: 32px;
   padding: 9px 16px 8px 16px;
   background: $light-orange;
